--- a/src/styles/system/default.scss
+++ b/src/styles/system/default.scss
@@ -79,6 +79,10 @@ body {
         grid-area: main;
     }
 
+    &__inner {
+        width: 100%;
+    }
+
     &__footer {
         height: 60px;
 
@@ -88,7 +92,10 @@ body {
     &__container {
         display: flex;
         align-items: center;
+        flex-direction: column;
+        justify-content: center;
 
+        width: 100%;
         height: 100%;
         padding-top: 30px;
         padding-bottom: 30px;
