--- a/src/components/auth/auth.scss
+++ b/src/components/auth/auth.scss
@@ -2,6 +2,7 @@
     width: 100%;
     &__list {
         display: flex;
+        flex-wrap: wrap;
 
         margin-right: -5px;
         margin-bottom: 20px;
@@ -12,6 +13,14 @@
         width: 33.3333%;
         padding-right: 5px;
         padding-left: 5px;
+
+        @include below(map-get($breaks, mobile)) {
+            width: 100%;
+            margin-bottom: 20px;
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
     }
 
     &__center {
